--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "best-invest",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bondalex-maker.github.io/github_pages_bestInvest/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -24,9 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": [
